with Div100vh to fix the TraceList control positionning on IPhone

--- a/styles/global.css
+++ b/styles/global.css
@@ -26,6 +26,9 @@ img {
     display: block;
 }
 
+.mapContainer {
+    height: 100%; /* Fallback */
+}
 
 @keyframes traceTransparencyA {
     0% {
